...
              child: Text('Bible Read', style: drawerTitleStyle),
            ),
            _buildNavItem(
              context,
              index: 0,
              icon: Icons.home_outlined,
              label: 'Home',
              textStyle: navigationTextStyle,
            ),
            _buildNavItem(
              context,
              index: 1,
              icon: Icons.rss_feed,
...
            ),
            const Divider(),
            _buildNavItem(
              context,
              index: 9,
              icon: Icons.person,
              label: 'Profile',
              textStyle: navigationTextStyle,
            ),
          ],
        ),
      ),
    );
...
